# Hospital_Management_System

./: .gitignore  1. HMS_codecheck_notebook.ipynb  2. tests_notebook.ipynb  HMS.ipynb  HMS_json-Copy1.ipynb  HMS_json.ipynb  HMS_txt.ipynb  README.md  Testing.ipynb  current_patient.txt  db.sqlite3  hms.py  hms_one_user.ipynb  manage.py  patient_values.txt  pyproject.toml  repo_code_file.py  test.ipynb  userfolder.json  userfolder.txt
.ipynb_checkpoints/: Guide-checkpoint.ipynb  HMS-checkpoint.ipynb  Testing-checkpoint.ipynb  current_patient-checkpoint.txt  hms-checkpoint.py  userfolder-checkpoint.json  userfolder-checkpoint.txt
HospitalSystemProjectFolder/HospitalStorage/: apps.py
HospitalSystemProjectFolder/SystemAPIs/: settings.py  urls.py
hms_dashboard/: asgi.py  settings.py  urls.py  wsgi.py
hms_dashboard_app/: apps.py  models.py  views.py
hms_dashboard_app/migrations/: 0001_initial.py
hms_env/: pyvenv.cfg
hms_env/Scripts/: activate  activate.bat
