[tool.poetry]
name = "hospital-management-system"
version = "0.1.0"
description = "To create a working and seamless integration of collecting and storing data"
authors = ["P- muriuki <wairimumuriuki07@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "*"
ipykernel = "*"
numpy = "*"
plotly = "*"
datetime = "*"
jupyter = "*"
papermill = "^2.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
